Fixed spacing issue when clicked on the web form's close btw

--- a/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
+++ b/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
@@ -112,6 +112,14 @@
 
 	}
 
+	// Main without webform in the slider area
+	#main.no-form{
+		margin-top: 50px;
+		@include breakpoint($mobile){
+			margin-top: 100px;  
+		}
+	}
+
 	// .visual .img-holder
 
 	.visual{
